Revision history for Perl extension Module::Build.

0.2808_05 -

 - Skip test in t/ext.t which tickles Text::ParseWords::shellwords() in
   5.6.2 [David Wheeler]

0.2808_04 - Thu Sep 11 22:51:27 PDT 2008

 - Backed-out incompatible Module::Finder change (first in 0.2808_02.)

0.2808_03 - Mon Sep  1 14:43:27 PDT 2008

 - Made adjustments for the format changes of recent Test::Harness
   output. [Nicholas Clark]

 - Fixed the documentation for script_files to indicate that we search
   bin/ for scripts by default.  It has been this way for several
   years. [Spotted by Ron Savage]

0.2808_02 - Wed Jul  9 16:45:08 PDT 2008

 - Experimental support for TAP::Harness with --use-tap-harness option
   and the tap_harness_args property. [David Wheeler & Eric Wilhelm]

 - Added test_file_exts property for main-run tests other than '*.t'.
   [David Wheeler]

 - Fixed getcwd()/rmtree() failure case on 5.10+mac where something is
   unhappy about all of the tests deleting their distgen directory
   before leaving it. [Eric Wilhelm & David Wheeler]

 - Improved support for parsing qv() in modules' $VERSION
   declarations, and made $VERSION-parsing errors more verbose. [Jos
   Boumans]

 - Integrated an omnibus patch for various VMS fixes. [Craig Berry &
   John E. Malmberg]

 - Some versions of Test::Harness (or something) seem to not be
   stripping the ".t" suffix when outputting test reports, which was
   causing one of our tests in t/compat.t to fail.  Fixed. [Spotted by
   a smoke tester]

 - Most Unix platforms seem to allow hyphens in usernames, so we honor
   this in our de-tilde-fying methods now. [Spotted by s-murata]

 - If there are multiple assignments to the $VERSION variable in
   someone's module and this generates warnings, tell the user what
   line number the problem is at.

 - Added 'gnu' and 'gnukfreebsd' as Unix variants. [Niko Tyni]

 - Fixed a couple bugs in how we quote arguments to external processes