@@ -5,6 +5,8 @@ Revision history for Perl extension Module::Build.
  - Skip test in t/ext.t which tickles Text::ParseWords::shellwords() in
    5.6.2 [David Wheeler]
 
+ - Fix some shell-quoting issues on Windows.
+
 0.2808_04 - Thu Sep 11 22:51:27 PDT 2008
 
  - Backed-out incompatible Module::Finder change (first in 0.2808_02.)
